# TOONify

./: .dockerignore  .gitignore  .replit  Cargo.toml  Dockerfile  PUBLISHING.md  PYTHON.md  README.md  UNIFFI_SETUP.md  VSCODE_SETUP.md  build.rs  replit.md  requirements-python.txt  test-extension.json
.github/workflows/: publish-npm.yml  publish-pypi.yml  release.yml
attached_assets/: Pasted-TOON-vs-JSON-A-Modern-Data-Format-Showdown-data-performance-ai-llm-Introduction-The-evoluti-1762998086742_1762998086742.txt
benches/: conversion_bench.rs
bindings/: .gitkeep
bindings/python/: README.md  setup.py
examples/: python_example.py
pkg/: README.md  package.json
proto/: converter.proto
scripts/: bump-version.sh  bump_version.py
src/: converter.rs  job_queue.rs  lib.rs  main.rs  wasm.rs
src/proto/: generated.rs  mod.rs
src/toon/: mod.rs  parser.rs  serializer.rs
tests/: advanced_validation_test.rs  batch_test.rs  cache_test.rs  cli_test.rs  compression_test.rs  distributed_cache_test.rs  distributed_processing_test.rs  docker_test.rs  edge_case_test.rs  npm_test.rs  pypi_test.rs  rate_limit_test.rs  roundtrip_test.rs  streaming_test.rs  validation_test.rs  vscode_extension_test.rs  wasm_test.rs  watch_test.rs
tests/wasm/: package-lock.json  package.json  playwright.config.js  server.js  test.html  wasm.spec.ts
tests/wasm/playwright-report/: index.html
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: toon.tmLanguage.json
