[package]
name = "toonify"
version = "0.1.0"
edition = "2024"

[lib]
name = "toonify"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core dependencies (work with WASM)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
thiserror = "1.0"

# Server dependencies (not for WASM)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
clap = { version = "4.5.51", features = ["derive"], optional = true }
flate2 = { version = "1.0", optional = true }
glob = { version = "0.3", optional = true }
notify = { version = "6.1", optional = true }
regex = { version = "1.10", optional = true }
rayon = { version = "1.10", optional = true }
lru = { version = "0.12", optional = true }
uniffi = { version = "0.29", features = ["cli"], optional = true }
memcache = { version = "0.17", optional = true }
redis = { version = "0.24", optional = true }
uuid = { version = "1.18.1", features = ["v4"], optional = true }
tonic-prost = { version = "0.14", optional = true }
tower_governor = { version = "0.8", optional = true }

[features]
default = ["server", "cli", "compression", "validation", "batch", "watch", "cache", "distributed-cache", "job-queue", "rate-limit", "uniffi"]
server = ["axum", "tokio", "tower", "tower-http", "tonic", "tonic-prost", "prost", "tracing", "tracing-subscriber", "lru"]
cli = ["clap", "tokio"]
compression = ["flate2"]
validation = ["regex"]
batch = ["glob", "rayon"]
watch = ["notify", "tokio"]
cache = ["lru"]
distributed-cache = ["memcache", "redis"]
job-queue = ["uuid", "tokio"]
rate-limit = ["tower_governor"]
uuid = ["dep:uuid"]
tonic-prost = ["dep:tonic-prost"]
tower_governor = ["dep:tower_governor"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
uniffi = { version = "0.29", features = ["build"] }


[[bin]]
name = "toonify"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/generate_bindings.rs"

[[test]]
name = "roundtrip_test"
path = "tests/roundtrip_test.rs"

[[test]]
name = "cli_test"
path = "tests/cli_test.rs"

[[test]]
name = "docker_test"
path = "tests/docker_test.rs"

[[test]]
name = "streaming_test"
path = "tests/streaming_test.rs"

[[test]]
name = "compression_test"
path = "tests/compression_test.rs"

[[test]]
name = "validation_test"
path = "tests/validation_test.rs"

[[test]]
name = "batch_test"
path = "tests/batch_test.rs"

[[test]]
name = "watch_test"
path = "tests/watch_test.rs"

[[test]]
name = "advanced_validation_test"
path = "tests/advanced_validation_test.rs"

[[test]]
name = "cache_test"
path = "tests/cache_test.rs"

[[test]]
name = "wasm_test"
path = "tests/wasm_test.rs"

[[test]]
name = "npm_test"
path = "tests/npm_test.rs"

[[test]]
name = "pypi_test"
path = "tests/pypi_test.rs"

[[test]]
name = "distributed_cache_test"
path = "tests/distributed_cache_test.rs"

[[test]]
name = "vscode_extension_test"
path = "tests/vscode_extension_test.rs"

[[test]]
name = "distributed_processing_test"
path = "tests/distributed_processing_test.rs"

[[bench]]
name = "conversion_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
